Fix agenda header alignment in Fiori theme. Closes telerik/kendo-ui-core#1669

--- a/styles/web/kendo.common-fiori.less
+++ b/styles/web/kendo.common-fiori.less
@@ -586,6 +586,12 @@ span.k-tooltip
 
 .k-scheduler-table th {
     height:1.8em;
+    padding-right: .625em;
+    padding-left: .625em;
+}
+
+.k-scheduler-header th.k-scheduler-groupcolumn {
+    width: 7.5em;
 }
 
 .k-scheduler-table td
